--- a/home.html
+++ b/home.html
@@ -4,7 +4,12 @@
     <title>US POP 1980s</title>
   </head>
   <body>
-    
+    Total amount of women in the 1980s:
+    <div id="txt1"> </div>
+    Total amount of men in the 1980s:
+    <div id="txt2"> </div>
+    Total amount of people between the ages of 18-26:
+    <div id="txt3"> </div>
   </body>
   <script src="home.js"></script>
 </html>
